--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grayscale",
-  "title": "Grayscale",
+  "name": "clean-blog",
+  "title": "Clean Blog",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/grayscale",
+  "homepage": "http://startbootstrap.com/template-overviews/clean-blog",
   "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
@@ -22,6 +22,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-grayscale.git"
+    "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog.git"
   }
 }
